--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,8 +13,8 @@
             "allow": [],
             "depConstraints": [
               {
-                "sourceTag": "*",
-                "onlyDependOnLibsWithTags": ["*"]
+                "sourceTag": "team:1",
+                "onlyDependOnLibsWithTags": ["team:1"]
               }
             ]
           }
