--- a/libs/my-component/project.json
+++ b/libs/my-component/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/my-component/src",
   "projectType": "library",
-  "tags": [],
+  "tags": ["team:1"],
   "targets": {
     "lint": {
       "executor": "@nx/linter:eslint",
